# clap

./: CMakeLists.txt  CREDIT.txt  Doxyfile.in  LICENSE  README.md  buildClap.sh
include/: API.h  Profiler.h  Stat.h  clfunc.def
include/CL/: cl_deprecated.h
include/Formatter/: XML.h
include/Spec/: compiler.inc  creational.inc  misc.inc  queue.inc  refcount.inc
include/clap/: API.h  Profiler.h  Stat.h  clfunc.inc  feature.h  feature.h.in  features.h.in
include/clap/Formatter/: XML.h
include/clap/Spec/: compiler.inc  creational.inc  misc.inc  queue.inc  refcount.inc
include/clap/Stat/: API.h  Attributes.h  CommandQueue.h  Context.h  Device.h  Kernel.h  Memory.h  NDRange.h  Program.h
include/clap/utils/: Casting.h  Enums.h  ScopeGuard.h  function_traits.h  hash.h
include/utils/: Casting.h  Enums.h  ScopeGuard.h  function_traits.h  hash.h
scripts/: test_all_configs.py
src/: API.cpp  Profiler.cpp  cl.cpp  err
src/Formatter/: XML.cpp
src/utils/: Enums.cpp  hash.cpp
